<resources>
    <string name="app_name">迷彩</string>
    <string name="app_name2">业主</string>
    <string name="app_name3">管理员</string>
    <string name="app_name_info">Lottery Fans</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="backstr">返回</string>
    <string name="app_info">欢迎来到彩迷</string>
    <string name="delete_tip_str">确定删除吗？</string>
    <string name="register_tip_str1">请填写真实姓名和证件号码，错误信息将导致注册失败！</string>
    <string name="register_tip_str2">添加银行卡，才能使用钱包功能！</string>
    <string name="site_tab_0">全部申请</string>
    <string name="site_tab_1">进行中</string>
    <string name="site_tab_2">已完成</string>
    <string name="site_tab_content_0">未受理</string>
    <string name="site_tab_content_1">进行中</string>
    <string name="site_tab_content_2">已完成</string>
    <string name="identity_info">请选择您的身份</string>
    <string name="identity_type_0">我是彩民</string>
    <string name="identity_type_1">我是站点老板</string>
    <string name="identity_type_2">我是管理员</string>
    <string name="username_id">账号:</string>
    <string name="username">账号</string>
    <string name="username1">ID号</string>
    <string name="password">密码</string>
    <string name="password_new">新密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="real_name">真实姓名</string>
    <string name="identity_name">身份证号</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_pw_str">忘记密码</string>
    <string name="register_info">我要注册</string>
    <string name="pw_find_title">密码找回</string>
    <string name="name_info">请输入您的账号</string>
    <string name="name_info1">请输入您的站点ID编号</string>
    <string name="name_info2">请输入您的管理员ID编号</string>
    <string name="pw_info">请输入您的密码</string>
    <string name="pw_info1">请输入您的旧密码</string>
    <string name="user_hint_info">6-16位数字或英文</string>
    <string name="user_hint_info1">请再次输入新密码</string>
    <string name="user_hint_info2">请再次输入密码</string>
    <string name="user_hint_info3">请输入您的手机号</string>
    <string name="register_info1_1">我已阅读并同意</string>
    <string name="register_info1_2">《服务协议》</string>
    <string name="register_info1_3">请填写注册信息</string>
    <string name="register_info2">完善个人资料</string>
    <string name="register_info2_1">请完善个人资料</string>
    <string name="register_hint_info2_1">请输入真实姓名</string>
    <string name="register_info3">添加银行卡</string>
    <string name="register_info3_1">请绑定持卡本人银行卡</string>
    <string name="register_info3_2">持卡人</string>
    <string name="register_info3_3">卡号</string>
    <string name="register_hint_info3_1">请输入持卡本人姓名</string>
    <string name="register_hint_info3_2">请输入您的银行卡号</string>
    <string name="register_info4">完成</string>
    <string name="register_info4_1">恭喜您</string>
    <string name="register_info4_2">成为中国福利彩票彩民</string>
    <string name="register_info4_3">进入使用</string>
    <string name="register_info_5">站点注册</string>
    <string name="next_info_common_1">下一步</string>
    <string name="register_info_common_2">跳过此步</string>
    <string name="register_info_common_3">服务协议</string>
    <string name="register_info_common_4">同意</string>
    <string name="register_info_common_5">扫描银行卡</string>
    <string name="register_info_common_6">扫描身份证</string>
    <string name="home_title">首页</string>
    <string name="home_title_1">扫一扫</string>
    <string name="lotterycity_title">彩票城</string>
    <string name="news_title">消息</string>
    <string name="news_item_str_0">通知查看</string>
    <string name="news_item_str_00">通知</string>
    <string name="news_item_str_1">活动</string>
    <string name="news_item_str_2">公告</string>
    <string name="news_item_str_3">资讯</string>
    <string name="news_item_str_4">开(中)奖</string>
    <string name="news_item_str_41">开奖信息</string>
    <string name="news_item_str_42">中奖信息</string>
    <string name="news_item_str_5">建设中...</string>
    <string name="news_item_str_6">公告:</string>
    <string name="news_item_str_7">通知:</string>
    <string name="news_item_str_9">资讯</string>
    <string name="news_item_str_10">活动</string>
    <string name="news_item_str_11">活动内容</string>
    <string name="news_item_str_12">活动标题:</string>
    <string name="news_item_str_13">活动时间:</string>
    <string name="news_item_str_14">发布日期:</string>
    <string name="news_item_str_15">发自:</string>
    <string name="news_item_str_16">历史记录</string>
    <string name="news_item_str_17">本期销售(元)</string>
    <string name="news_item_str_18">奖池金额(元)</string>
    <string name="news_item_str_19">奖项</string>
    <string name="news_item_str_20">中奖注数</string>
    <string name="news_item_str_21">每注奖金(元)</string>
    <string name="news_item_str_22">一等奖</string>
    <string name="news_item_str_23">二等奖</string>
    <string name="news_item_str_24">三等奖</string>
    <string name="news_item_str_25">四等奖</string>
    <string name="news_item_str_26">五等奖</string>
    <string name="news_item_str_27">六等奖</string>
    <string name="debug_str_0">预开票已发售请及时预订</string>
    <string name="debug_str_1">2016年第一期预开票已开始发售, 因数量有限, 请各位站点业主及时预订。2016年第一期预开票已开始发售, 因数量有限, 请各位站点业主及时预订。2016年第一期预开票已开始发售, 因数量有限, 请各位站点业主及时预订。</string>
    <string name="debug_str_2">2016年1月20日 - 2016年5月20日</string>
    <string name="debug_str_3">彩民理性购彩 机选中大奖</string>
    <string name="debug_str_4">全国仅中出1注单注奖金1.72亿元的一等奖，在成都出现。</string>
    <string name="debug_str_5">体彩评说1</string>
    <string name="debug_str_6">第2016054期</string>
    <string name="debug_str_7">2016-05-12 (周四)</string>
    <string name="debug_str_8">298, 048, 220</string>
    <string name="debug_str_9">254, 227, 996</string>
    <string name="debug_str_10">体彩社区</string>
    <string name="debug_str_11">一年一度新彩票发售</string>
    <string name="debug_str_12">新一年的彩票发售现场，售卖火爆，彩民排队</string>
    <string name="debug_str_13">一年一度新彩票发售，场面火爆，快来围观啊！</string>
    <string name="debug_str_14">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</string>
    <string name="debug_str_15">北京市西城区闹市口大街125号</string>
    <string name="debug_str_16">1000元以上返现10%</string>
    <string name="debug_str_17">第2016063期 06月02日(周四)21:30截止</string>
    <string name="debug_str_18">**** **** **** 4277</string>
    <string name="debug_str_19">18701265806</string>
    <string name="debug_str_20">1,000</string>
    <string name="debug_str_21">2015-0622-1111</string>
    <string name="debug_str_22">第一条　本规则依据财政部《彩票发行与销售管理暂行规定》和《中国福利彩票（电脑型）联合发行与销售管理暂行办法》（以下简称《管理办法》）制定。

            \n第二条　中国福利彩票“双色球”（以下简称“双色球”）是一种联合发行的“乐透型”福利彩票。采用计算机网络系统发行销售，定期电视开奖。

            \n第三条　“双色球”由中国福利彩票发行管理中心（以下简称中福彩中心）统一组织发行，在全国销售。

            \n第四条　参与“双色球”销售的省级行政区域福利彩票发行中心（以下称省中心）在中福彩中心的直接领导下，负责对本地区的“双色球”销售活动实施具体的组织和管理。
    </string>
    <string name="friend_str0">私聊</string>
    <string name="me_title">我</string>
    <string name="me_item_str_0">我的钱包</string>
    <string name="me_item_str_1">兑奖</string>
    <string name="me_item_str_2">我的彩票</string>
    <string name="me_item_str_3">委托服务</string>
    <string name="me_item_str_4">故障申报</string>
    <string name="me_item_str_5">即开票预订</string>
    <string name="me_item_str_6">雇员管理</string>
    <string name="me_item_str_7">我的投注站</string>
    <string name="me_item_str_8">站点缴费</string>
    <string name="me_item_str_9">委托订单</string>
    <string name="comunity_title">社区</string>
    <string name="photo_menu_string1">小视频</string>
    <string name="photo_menu_string2">拍照</string>
    <string name="photo_menu_string3">从手机相册选择</string>
    <string name="comunity_string1">发布我的最新社区动态</string>
    <string name="comunity_string2">新的朋友</string>
    <string name="comunity_string3">接受</string>
    <string name="comunity_string4">添加</string>
    <string name="comunity_string5">已添加</string>
    <string name="comunity_string6">等待验证</string>
    <string name="comunity_string7">选择联系人</string>
    <string name="comunity_string8">相册</string>
    <string name="comunity_info_0">贴数</string>
    <string name="comunity_info_1">加好友</string>
    <string name="comunity_info_2">发表文字</string>
    <string name="comunity_info_3">标题:</string>
    <string name="comunity_info_4">正文内容:</string>
    <string name="comunity_info_5">社区列表</string>
    <string name="comunity_info_6">帖子详情</string>
    <string name="comunity_info_7">楼主</string>
    <string name="comunity_info_8">网友点评</string>
    <string name="comunity_info_9">回复</string>
    <string name="comunity_info_10">查看更多点评</string>
    <string name="comunity_info_11">点赞</string>
    <string name="comunity_info_12">暂时还没有社区，快去创建吧!</string>
    <string name="comunity_info_13">暂时还没有好友，快去添加吧!</string>
    <string name="comunity_info_14">暂时还没有社区!</string>
    <string name="comunity_info_hint_1">帖子标题...</string>
    <string name="comunity_info_hint_2">帖子内容...</string>
    <string name="comunity_info_hint_3">社区名</string>
    <string name="comunity_info_hint_4">社区名称</string>
    <string name="comunity_info_hint_5">社区分类</string>
    <string name="comunity_info_hint_6">社区介绍</string>
    <string name="contacts_info_1">通讯录</string>
    <string name="contacts_info_2">添加好友</string>
    <string name="contacts_info_3">加为好友</string>
    <string name="contacts_info_4">对方拒绝</string>
    <string name="contacts_info_5">同意</string>
    <string name="contacts_info_6">拒绝</string>
    <string name="contacts_info_7">通过验证</string>
    <string name="contacts_info_8">搜索</string>
    <string name="contacts_info_9">发消息</string>
    <string name="contacts_info_10">地区</string>
    <string name="contacts_info_11">他的社区</string>
    <string name="contacts_info_12">详细资料</string>
    <string name="contacts_info_hint">手机号/账号</string>
    <string name="chat_info_1">发送</string>
    <string name="chat_info_hint">回复楼主:</string>
    <string name="site_declare_record_info">申报详情</string>
    <string name="site_declare_info">投注站编号</string>
    <string name="site_declare_info1">申报分类</string>
    <string name="site_declare_info2">维修类型</string>
    <string name="site_declare_info3">故障描述</string>
    <string name="site_declare_info4">申请数量</string>
    <string name="site_declare_info5">耗材余量</string>
    <string name="site_declare_info6">期望日期</string>
    <string name="site_declare_info7">详情</string>
    <string name="site_declare_info8">上传照片</string>
    <string name="site_declare_info9">申报记录</string>
    <string name="site_declare_info10">备注问题详情......</string>
    <string name="site_declare_info11">请输入日期</string>
    <string name="site_declare_info12">请输入申请数量</string>
    <string name="site_declare_info13">请输入耗材余量</string>
    <string name="site_declare_info14">申报编号</string>
    <string name="site_declare_info15">耗材类型</string>
    <string name="site_declare_info16">当前状态</string>
    <string name="site_declare_info17">服务评价</string>
    <string name="site_declare_info18">当前进度</string>
    <string name="site_declare_info19">评价完成</string>
    <string name="site_declare_info20">评价</string>
    <string name="site_declare_info21">参考图</string>
    <string name="site_declare_info22">去维修</string>
    <string name="site_declare_info23">维修完成</string>
    <string name="site_declare_info24">延后维修</string>
    <string name="site_declare_info25">等待中</string>
    <string name="site_declare_info26">维修中</string>
    <string name="site_declare_btn2">取消</string>
    <string name="setting_info_3">手机号码</string>
    <string name="setting_info_4">验证码</string>
    <string name="setting_info_5">请输入手机号</string>
    <string name="setting_info_6">输入验证码</string>
    <string name="setting_info_btn0">获取验证码</string>
    <string name="setting_info_btn1">绑定手机</string>
    <string name="setting_info_btn3">确定</string>
    <string name="entrust_str17_1">胆拖号码</string>
    <string name="entrust_str17_2">历史排除</string>
    <string name="entrust_str17_3">随机选号</string>
    <string name="entrust_str17_4">清空号码</string>
    <string name="pay_info_str2">优惠详情</string>
    <string name="pay_info_str3">支付后3日内返到账户内, 请到钱包查看</string>
    <string name="pay_info_str4">返现金额</string>
    <string name="wallet_str_27">选择优先支付方式</string>
</resources>