<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="60dp"
                  android:layout_centerInParent="true"
                  android:background="@drawable/rect_radius_1">

        <TextView
            style="@style/text_size_14_text_color_3"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/delete_tip_str"
            android:visibility="visible"
            android:layout_centerInParent="true"
            android:gravity="center_vertical|center_horizontal"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp">

            <Button
                style="@style/text_size_12_text_white"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:text="@string/setting_info_btn3"
                android:id="@+id/delete_tip_btn1"
                android:background="@drawable/rect_radius_14_1"
                android:layout_marginRight="20dp"
                android:layout_weight="1"/>

            <Button
                style="@style/text_size_12_text_white"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:text="@string/site_declare_btn2"
                android:id="@+id/delete_tip_btn2"
                android:background="@drawable/rect_radius_14_1"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
